Working with script to create posts

--- a/en/DiscriminatedUnions.ipynb
+++ b/en/DiscriminatedUnions.ipynb
@@ -487,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the discriminated union is has only one case, there is a short way to unwrap the value inside it:"
+    "Since the discriminated union has only one case, there is a short way to unwrap the value inside it:"
    ]
   },
   {
@@ -528,27 +528,6 @@
    "metadata": {},
    "source": [
     "Looks like there is a lot of pomp in this types, why just not use a simpler `string` instead? The answer is, again, related with functions. Let us define the `printModel` function as:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "- Say something about validation?\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
    ]
   },
   {
@@ -604,20 +583,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The signature of the `printModel` function is `Model -> ()`, meaning that receives a Model value and returns unit. Since the input is a `Model`, there is no possible way that we can pass a plain string to it. In this way, one protects the input of the function such that it has to be the precise type we decided, and nothing else. \n",
     "\n",
-    "\n",
-    "### Wrapping up"
+    "It should be pointed out that this is not a validation, that is, one still can mix up the meaning of `Model` by building it with any string, the single piece of code that is the function `printModel` is guarded by the single discriminated union type. \n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Wrapping up\n",
+    "\n",
+    "The discriminated union type in both variants (single and multiple) is a key aspect of the functional programming in F\\#. The ability to describe well predefined collections with a single type simplifies codes and makes them robust. The exhaustive pattern matching specification (monitored by the F\\# compiler behind scenes) makes sure that the programmer takes care of all cases of the discriminated union, and not a single case is left behind, with possible holes in the code. \n",
+    "\n",
+    "The discriminated union type is the way F\\# represents a _sum type_, as this kind of types are called in algebraic type theory. "
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Next, [records]({% post_url 2023-01-25-records. %})."
+   ]
   }
  ],
  "metadata": {
@@ -629,7 +618,7 @@
   "language_info": {
    "file_extension": ".fs",
    "mimetype": "text/x-fsharp",
-   "name": "C#",
+   "name": "F#",
    "pygments_lexer": "fsharp",
    "version": "4.5"
   },
