--- a/en/IntroToTypes.ipynb
+++ b/en/IntroToTypes.ipynb
@@ -80,7 +80,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "## Annotating types and type inference\n",
     "\n",
@@ -89,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -110,7 +117,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "which, except for the use of the `let` keyword (and the fact that they are inmutable!), can look quite familiar to, for example, Python: one uses the name of the value, the equal sign and the expression that will be assigned to the value in the right hand side. There is no declaration of _which_ type the value is! But we already stated that the language uses static types, so how the language knows which type each value has? \n",
     "\n",
@@ -131,13 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -152,20 +166,27 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "One uses the `:<type>` annotation to define the types of each value. In the case of functions one also uses `:<type>` just after defining all the inputs:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -196,25 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "ename": "Unhandled Exception",
-     "evalue": "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\ninput.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'",
-     "output_type": "error",
-     "traceback": [
-      "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\ninput.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "let si = 2 + 3 \n",
     "let sf = 2 + 3.0 "
@@ -223,7 +235,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "> 🔔 Looking at the signature  `int -> int -> int` of the function `sum` it does not seem clear which are the inputs and which are the outputs. From the definition of the function we know that it receives two inputs and returns another one, but the signature is completely oblivious to this, and uses the same `->` symbol between all the types. Could `sum` be a function that receives an `int` and returns `int -> int`, which is itself a function? The answer is yes, and is called _currying_. \n",
     "We will come back later to currying when we revisit functions."
@@ -232,7 +251,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "One can fully define the types of the input variables together with the output:"
    ]
@@ -245,7 +271,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -257,7 +283,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "The parenthesis are used to associate each input value with its type. One does not need to annotate all the inputs of a function, just those ones that confuse the compiler or your fellow developer, or just you in the future. "
    ]
@@ -265,7 +298,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "### The `unit` type and a first contact with side effects\n",
     "\n",
@@ -284,19 +324,10 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am printfn \n",
-      "and I do return unit: ()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "let q = printfn \"I am printfn \"\n",
     "printfn \"and I do return unit: %A\" q"
@@ -305,7 +336,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Here we assign the `printfn` result into the value `q`, and then we print its value, which is, `()`. Note that the function `printfn` does print in the console, pretty much as any print-like function in most languages. \n",
     "\n",
@@ -320,7 +358,7 @@
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -332,7 +370,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "The function `ohMy` just defines the string \"ohMy\", and does not need to receive anything as an input. \n",
     "\n",
@@ -351,7 +396,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "> Checkout [the Jupyter notebook companion of this guide](https://github.com/fcolavecchia/fp-course/blob/main/en/IntroToTypes.ipynb)."
    ]
@@ -359,7 +411,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Next, [discriminated unions]({% post_url 2023-01-25-discriminated_unions %})."
    ]
@@ -367,18 +426,74 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (F#)",
-   "language": "F#",
-   "name": ".net-fsharp"
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
-  "language_info": {
-   "file_extension": ".fs",
-   "mimetype": "text/x-fsharp",
-   "name": "C#",
-   "pygments_lexer": "fsharp",
-   "version": "4.5"
-  },
-  "orig_nbformat": 4
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
+      "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     }
+    ]
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
