Done with the nb conversion, now add header to output

--- a/tools/CreatePosts.ipynb
+++ b/tools/CreatePosts.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -46,14 +46,14 @@
    },
    "outputs": [],
    "source": [
-    "let nbConvert file =\n",
+    "let nbConvert file outfile =\n",
     "    let fullName = Path.Combine(srcDir,\"en\",file)\n",
-    "    $\"/opt/miniconda3/bin/jupyter nbconvert --to markdown {fullName}.ipynb --no-prompt\""
+    "    $\"/opt/miniconda3/bin/jupyter nbconvert --to markdown {fullName}.ipynb --no-prompt --output={outfile}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -66,16 +66,17 @@
    "source": [
     "let cliConvert inFile outfile = \n",
     "    cli {\n",
-    "        Exec (nbConvert inFile)\n",
+    "        Shell BASH \n",
+    "        Command (\"\\\"\" + (nbConvert inFile outfile) + \"\\\"\" )\n",
     "        // Arguments $\"--output={outfile}\" \n",
     "        WorkingDirectory (Path.Combine(srcDir,\"tools\"))\n",
     "    }\n",
     "\n",
-    "let dry (cliValue:  ExecContext) =    \n",
+    "let dry (cliValue:  ShellContext) =    \n",
     "    cliValue \n",
     "    |> Command.toString\n",
     "\n",
-    "let run (cliValue:  ExecContext) =    \n",
+    "let run (cliValue:  ShellContext) =    \n",
     "    cliValue \n",
     "    |> Command.execute\n"
    ]
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -223,7 +224,7 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>/opt/miniconda3/bin/jupyter nbconvert --to markdown /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb --no-prompt </td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>bash -c /opt/miniconda3/bin/jupyter nbconvert --to markdown /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb --no-prompt--output=/Users/flavioc/Web/fcolavecchia/_posts/fsharp/0_Fundamentals.md</td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -279,26 +280,136 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "System.ComponentModel.Win32Exception (2): An error occurred trying to start process '/opt/miniconda3/bin/jupyter nbconvert --to markdown /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb --no-prompt' with working directory '/Users/flavioc/Documents/Blog/tools'. No such file or directory\n   at System.Diagnostics.Process.ForkAndExecProcess(ProcessStartInfo startInfo, String resolvedFilename, String[] argv, String[] envp, String cwd, Boolean setCredentials, UInt32 userId, UInt32 groupId, UInt32[] groups, Int32& stdinFd, Int32& stdoutFd, Int32& stderrFd, Boolean usesTerminal, Boolean throwOnNoExec)\n   at System.Diagnostics.Process.StartCore(ProcessStartInfo startInfo)\n   at System.Diagnostics.Process.Start(ProcessStartInfo startInfo)\n   at Fli.Command.startProcess(FSharpFunc`2 inputFunc, FSharpFunc`2 outputFunc, ProcessStartInfo psi) in C:\\Users\\const\\github\\repos\\Fli\\src\\Fli\\Command.fs:line 67\n   at Fli.Command.Command.execute(ExecContext context) in C:\\Users\\const\\github\\repos\\Fli\\src\\Fli\\Command.fs:line 187\n   at Microsoft.FSharp.Primitives.Basics.List.map2[T1,T2,TResult](FSharpFunc`2 mapping, FSharpList`1 xs1, FSharpList`1 xs2) in D:\\a\\_work\\1\\s\\src\\FSharp.Core\\local.fs:line 288\n   at <StartupCode$FSI_0027>.$FSI_0027.main@()\n   at System.RuntimeMethodHandle.InvokeMethod(Object target, Void** arguments, Signature sig, Boolean isConstructor)\n   at System.Reflection.MethodInvoker.Invoke(Object obj, IntPtr* args, BindingFlags invokeAttr)",
-     "output_type": "error",
-     "traceback": [
-      "System.ComponentModel.Win32Exception (2): An error occurred trying to start process '/opt/miniconda3/bin/jupyter nbconvert --to markdown /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb --no-prompt' with working directory '/Users/flavioc/Documents/Blog/tools'. No such file or directory\n",
-      "   at System.Diagnostics.Process.ForkAndExecProcess(ProcessStartInfo startInfo, String resolvedFilename, String[] argv, String[] envp, String cwd, Boolean setCredentials, UInt32 userId, UInt32 groupId, UInt32[] groups, Int32& stdinFd, Int32& stdoutFd, Int32& stderrFd, Boolean usesTerminal, Boolean throwOnNoExec)\n",
-      "   at System.Diagnostics.Process.StartCore(ProcessStartInfo startInfo)\n",
-      "   at System.Diagnostics.Process.Start(ProcessStartInfo startInfo)\n",
-      "   at Fli.Command.startProcess(FSharpFunc`2 inputFunc, FSharpFunc`2 outputFunc, ProcessStartInfo psi) in C:\\Users\\const\\github\\repos\\Fli\\src\\Fli\\Command.fs:line 67\n",
-      "   at Fli.Command.Command.execute(ExecContext context) in C:\\Users\\const\\github\\repos\\Fli\\src\\Fli\\Command.fs:line 187\n",
-      "   at Microsoft.FSharp.Primitives.Basics.List.map2[T1,T2,TResult](FSharpFunc`2 mapping, FSharpList`1 xs1, FSharpList`1 xs2) in D:\\a\\_work\\1\\s\\src\\FSharp.Core\\local.fs:line 288\n",
-      "   at <StartupCode$FSI_0027>.$FSI_0027.main@()\n",
-      "   at System.RuntimeMethodHandle.InvokeMethod(Object target, Void** arguments, Signature sig, Boolean isConstructor)\n",
-      "   at System.Reflection.MethodInvoker.Invoke(Object obj, IntPtr* args, BindingFlags invokeAttr)"
-     ]
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>Id</th><th>Text</th><th>ExitCode</th><th>Error</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>30922</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>usage: jupyter [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+       "               [--paths] [--json] [--debug]\n",
+       "               [subcommand]\n",
+       "\n",
+       "Jupyter: Interactive Computing\n",
+       "\n",
+       "positional arguments:\n",
+       "  subcommand     the subcommand to launch\n",
+       "\n",
+       "optional arguments:\n",
+       "  -h, --help     show this help message and exit\n",
+       "  --version      show the versions of core jupyter packages and exit\n",
+       "  --config-dir   show Jupyter config dir\n",
+       "  --data-dir     show Jupyter data dir\n",
+       "  --runtime-dir  show Jupyter runtime dir\n",
+       "  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+       "                 format.\n",
+       "  --json         output paths as machine-readable json\n",
+       "  --debug        output debug information about paths\n",
+       "\n",
+       "Available subcommands: bundlerextension console contrib dejavu execute kernel\n",
+       "kernelspec migrate nbconvert nbextension nbextensions_configurator notebook\n",
+       "qtconsole run serverextension troubleshoot trust\n",
+       "\n",
+       "Please specify a subcommand or one of the optional arguments.</pre></div></td></tr></tbody></table></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "(notebooks, posts)\n",
     "    ||> List.map2 (fun ni no -> run (cliConvert ni no))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "fsharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>Id</th><th>Text</th><th>ExitCode</th><th>Error</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>30596</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "let test =\n",
+    "    cli {\n",
+    "        Shell BASH\n",
+    "        Command \"echo Hello World!\"\n",
+    "    }\n",
+    "    // |> Command.execute\n",
+    "test"
    ]
   }
  ],
