Added type exercises

--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -64,7 +64,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "\n",
     "\n",
@@ -86,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -103,20 +110,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "binds the literal expression `1` to the name `a`. On the right hand side of the `=` symbol (that acts here as a binding operator), one can have any valid expression:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -130,20 +144,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "and so on. Of course one can associate a previous binding with a new one through an expression:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -153,14 +174,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "In the line above, we add four to `a` and bind the result of this expression to the `b` identifier. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "### Immutability\n",
     "\n",
@@ -169,25 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "ename": "Unhandled Exception",
-     "evalue": "input.fsx (2,5)-(2,6) typecheck error Duplicate definition of value 'q'",
-     "output_type": "error",
-     "traceback": [
-      "input.fsx (2,5)-(2,6) typecheck error Duplicate definition of value 'q'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "let q = 3\n",
     "let q = q + 1"
@@ -196,20 +222,27 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "which answers why one does not use the term _variable_ in F\\#: once the value of an expression is obtained, it cannot be changed. In other words, all the values are _immutable_: once there, they cannot be changed. There are no variables in the language, because there is nothing to _vary_. You can create as many values as you want, but you cannot change them: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
     },
     "vscode": {
-     "languageId": "dotnet-interactive.fsharp"
+     "languageId": "polyglot-notebook"
     }
    },
    "outputs": [],
@@ -220,7 +253,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "The implications of this are deep and it is very important to let the concept mature and sink in, because it percolates all the code in F\\# (and any other functional language). In some way, since everything is an expression, coding in F\\# is mananging the expressions that solve our problem. You name an expression (that is, you bind it to an identifier), use it in another expression, bind its value to a new identifier and so on an so on.\n",
     "\n",
@@ -230,7 +270,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "> Checkout [the Jupyter notebook companion of this guide](https://github.com/fcolavecchia/fp-course/blob/main/en/Fundamentals.ipynb)."
    ]
@@ -238,7 +285,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "Next, [functions]({% post_url 2022-12-20-functions %})."
    ]
@@ -246,18 +300,41 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (F#)",
-   "language": "F#",
-   "name": ".net-fsharp"
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
-  "language_info": {
-   "file_extension": ".fs",
-   "mimetype": "text/x-fsharp",
-   "name": "C#",
-   "pygments_lexer": "fsharp",
-   "version": "4.5"
-  },
-  "orig_nbformat": 4
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
+      "name": "csharp"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     }
+    ]
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
