--- a/en/IntroToTypes.ipynb
+++ b/en/IntroToTypes.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "The bullet list can be long, but probably one can write it down in a page (or, maybe it is provided by your vending machine client). \n",
     "\n",
-    "It looks like one can classify the features of inputs and outputs more broadly. On one hand, the cardholder's name of a credit card and expiration dates are huge collections that can not be determined _a priori_. On the other hand, we have some features that belong to a well predefined collection (car colors, types of products). Notice also that these two kind of types can be compound together in inputs or outputs, like in the wallet model. \n",
+    "It looks like one can classify the features of inputs and outputs more broadly. On one hand, the cardholder's name of a credit card and expiration dates are huge collections that can not be determined _a priori_. On the other hand, we have some features that belong to a well predefined group of different cases (car colors, types of products). Notice also that these two kind of types can be compound together in inputs or outputs, like in the wallet model. \n",
     "\n",
     "One of the greatest features of F\\# is that provides precise ways to implement these two kind of types. In the next sections we will see how to build these inputs and outputs in F\\#.\n",
     "\n",
