--- a/tools/CreatePosts.ipynb
+++ b/tools/CreatePosts.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -224,7 +224,7 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>bash -c /opt/miniconda3/bin/jupyter nbconvert --to markdown /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb --no-prompt--output=/Users/flavioc/Web/fcolavecchia/_posts/fsharp/0_Fundamentals.md</td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>bash -c &quot;/opt/miniconda3/bin/jupyter nbconvert --to markdown /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb --no-prompt --output=/Users/flavioc/Web/fcolavecchia/_posts/fsharp/0_Fundamentals.md&quot;</td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -282,31 +282,8 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>Id</th><th>Text</th><th>ExitCode</th><th>Error</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>30922</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>usage: jupyter [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
-       "               [--paths] [--json] [--debug]\n",
-       "               [subcommand]\n",
-       "\n",
-       "Jupyter: Interactive Computing\n",
-       "\n",
-       "positional arguments:\n",
-       "  subcommand     the subcommand to launch\n",
-       "\n",
-       "optional arguments:\n",
-       "  -h, --help     show this help message and exit\n",
-       "  --version      show the versions of core jupyter packages and exit\n",
-       "  --config-dir   show Jupyter config dir\n",
-       "  --data-dir     show Jupyter data dir\n",
-       "  --runtime-dir  show Jupyter runtime dir\n",
-       "  --paths        show all Jupyter paths. Add --json for machine-readable\n",
-       "                 format.\n",
-       "  --json         output paths as machine-readable json\n",
-       "  --debug        output debug information about paths\n",
-       "\n",
-       "Available subcommands: bundlerextension console contrib dejavu execute kernel\n",
-       "kernelspec migrate nbconvert nbextension nbextensions_configurator notebook\n",
-       "qtconsole run serverextension troubleshoot trust\n",
-       "\n",
-       "Please specify a subcommand or one of the optional arguments.</pre></div></td></tr></tbody></table></td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>Id</th><th>Text</th><th>ExitCode</th><th>Error</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>30954</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb to markdown\n",
+       "[NbConvertApp] Writing 8612 bytes to /Users/flavioc/Web/fcolavecchia/_posts/fsharp/0_Fundamentals.md</pre></div></td></tr></tbody></table></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
