--- a/en/TypeExercises.ipynb
+++ b/en/TypeExercises.ipynb
@@ -13,6 +13,8 @@
     " - Model a type `Coins` that accounts for the number of each of the coins the machine receives. \n",
     " - Create a function `amount` that receives a value of `Coins` and returns the amount in $\\$$ that the customer introduced in the machine.\n",
     "\n",
+    "> 💡 The function `float` can be used to convert an integer value to a float type \n",
+    "\n",
     "### Slots\n",
     "\n",
     "The food vending machine vendor supplies the machine with different slots to accomodate products that have different sizes. The vendor provides three different sizes, single, double and triple. \n",
@@ -20,7 +22,7 @@
     "- Extend the model `FoodMachineItem` to add the size of the product measured by the size of the slot it occupies.\n",
     "\n",
     "### Coffee machine\n",
-    "Our vending machine client wants to add a coffee machine just beside the food vending machine, and wants us to prepare the software to manage it. As a first round conversation, we have been informed that the coffee machine will serve coffee and black tea. Sugar and cream can be added to both of them. It will also have chocolate and capucchino, with the only option to add cream. Finally, it will also serve a healthy green or white tea that can be topped with milk only. Start modeling the coffee machine by introducing the types to describe all these beverages.\n",
+    "Our vending machine client wants to add a coffee machine just beside the food vending machine, and wants us to prepare the software to manage it. As a first round conversation, we have been informed that the coffee machine will serve coffee and black tea. Sugar and cream can be added to both of them. It will also have chocolate and capucchino, with the only option to add sugar. Finally, it will also serve a healthy green or white tea that can be topped with milk only. Start modeling the coffee machine by introducing the types to describe all these beverages.\n",
     "\n"
    ]
   },
@@ -40,8 +42,8 @@
    },
    "outputs": [],
    "source": [
-    "type Cents = \n",
-    "    | Cents of uint8\n",
+    "type Dimes = \n",
+    "    | Dimes of uint8\n",
     "\n",
     "type Quarters = \n",
     "    | Quarters of uint8 \n",
@@ -49,14 +51,19 @@
     "type Halfs =\n",
     "    | Halfs of uint8 \n",
     "\n",
-    "type Amount =\n",
+    "type Coins =\n",
     "    { \n",
-    "        Cents: Cents \n",
+    "        Dimes: Dimes \n",
     "        Quarters: Quarters\n",
     "        Halfs: Halfs \n",
     "    }\n",
     "\n",
-    "\n"
+    "let amount coins = \n",
+    "    let (Dimes dimes) = coins.Dimes \n",
+    "    let (Quarters quarts) = coins.Quarters \n",
+    "    let (Halfs halfs) = coins.Halfs\n",
+    "\n",
+    "    (float dimes) * 0.1 + float (quarts) * 0.25 + float (halfs) * 0.5\n"
    ]
   }
  ],
